# telegram-bot

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: generate-python-betterproto.yml  generate-python-stubs.yml  proto-gen.yml
agents/: CODEBASE_SUMMARY.md
proto/: telegram_message.proto
telegram-bot/: .dockerignore  Dockerfile  README.md  exercise.py  main.py  pyproject.toml  requirements.txt  storage.py  weight.py  workout.py
telegram-bot/proto_stubs/: telegram_message_pb2.py  telegram_message_pb2.pyi
tools/proto-toolchain/: Dockerfile
